# circlescape

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  PROTOCOL.md  README.md  protocol.md  protocol.txt
client/: CMakeLists.txt  build.bat  check.js  deploy.bat  error.html  game.js  index.html  lib.js  style.css  tsconfig.json
client/etc/font/: scape.eot
client/js/: lib.js  scape.js
client/lib/: check.js  glm.js  load.js  loginstration.js  utf8.js
client/raw/: check.js
client/scripts/: Database.ts
client/src/: Connection.ts  Crypto.ts  Entrypoint.ts  Extensions.ts  FileCache.ts  Init.js  MasterProtocol.ts  Packet.ts  RenderContext.ts  SlaveProtocol.ts  Utilities.ts  main.cpp
client/src/def/: BigInt.d.ts  MD5.d.ts
client/src/sock/: Connection.ts  Crypto.ts  Packet.ts
client/src/ui/: Loading.ts
client/src/util/: Extensions.ts
include/client/okuu/: okuu.c  okuu.h
include/server/orin/: orin.c  orin.h
resources/client/shaders/: test.frag  test.vert
resources/server/: _mem_schema.db  config.ini  test.ini
server/: 2config.ini  ActiveConnection.cs  App.config  CMakeLists.txt  CircleScape.csproj  CircleScape.sln  Configuration.cs  Entrypoint.cs  MasterServerList.cs  PendingConnection.cs  PoolManager.cs  Server.cs  ServerList.cs  SockScape.csproj  SockScape.sln  Utilities.cs  config.ini  hard_schema.db  hard_schema.db-journal  main.cpp  mem_schema.db-journal  packages.config  scape.db  server.csproj  server.sln
server/DAL/: Item.cs  ItemDefinition.cs  ItemMaster.cs  Origin.cs  ScapeDb.Context.cs  ScapeDb.Context.tt  ScapeDb.Designer.cs  ScapeDb.cs  ScapeDb.edmx  ScapeDb.edmx.diagram  ScapeDb.tt  Server.cs  Session.cs  Sessions.cs  User.cs  Users.cs
server/Database/: Database.cs  Query.cs  Table.cs
server/Encryption/: BlockCipher.cs  Cipher.cs  KeyExchange.cs  StreamCipher.cs
server/Kneesocks/: Connection.cs  Frame.cs  Handshake.cs  Kneesocks.csproj  Pool.cs  ReadBuffer.cs  Server.cs  Stack.cs  Utilities.cs
server/Libraries/Glove/: ArrayExtensions.cs  CryptoExtensions.cs  Glove.csproj  NumericExtensions.cs  RandomContext.cs  StringExtensions.cs
server/Libraries/Glove/INI/: Instance.cs  Section.cs  SettingsFile.cs  Value.cs
server/Libraries/Kneesocks/: Connection.cs  Frame.cs  Handshake.cs  Kneesocks.csproj  Pool.cs  ReadBuffer.cs  Server.cs  Stack.cs  Utilities.cs
server/Libraries/Kneesocks/Properties/: AssemblyInfo.cs
server/Libraries/Kneesocks/WebSocket/: Connection.cs  Frame.cs  Handshake.cs  Pool.cs  ReadBuffer.cs  Server.cs  Stack.cs
server/Libraries/Square/: ArrayExtensions.cs  ByteArrayExtensions.cs  CryptoExtensions.cs  General.cs  NumericExtensions.cs  RandomContext.cs  Square.csproj  StringExtensions.cs
server/Libraries/Square/INI/: Instance.cs  Section.cs  SectionRules.cs  SettingsFile.cs  Value.cs
server/Libraries/Square/Properties/: AssemblyInfo.cs
server/Migrations/: 201706040437361_Initial.Designer.cs  201706040437361_Initial.cs  201706040437361_Initial.resx  201708231959530_Initial.Designer.cs  201708231959530_Initial.cs  201708231959530_Initial.resx  201708251600325_Initial.Designer.cs  201708251600325_Initial.cs  Configuration.cs
server/Properties/: AssemblyInfo.cs
server/Socks/: ActiveConnection.cs  MasterConnection.cs  MasterIntraClient.cs  MasterIntraServer.cs  MasterUdpClient.cs  MasterUdpServer.cs  Packet.cs  PendingConnection.cs  PlayerConnection.cs  PoolManager.cs
server/Socks/Protocols/: InterMasterIds.cs  IntraMasterIds.cs  Packet.cs
server/Websocket/: Connection.cs  Frame.cs  Handshake.cs  Pool.cs  Server.cs  Stack.cs
server/What/: INIFile.cs
server/src/: .main.cpp.kate-swp  main.cpp
server/src/crypto/: base64.cpp  base64.hpp  bcrypt.cpp  bcrypt.hpp  bfish.cpp  bfish.hpp  cipher.cpp  cipher.hpp  keyex.cpp  keyex.hpp  sha1.cpp  sha1.hpp
server/src/ctx/: master.hpp  slave.cpp  slave.hpp
server/src/db/: _init_sql.cpp  _init_sql.hpp  database.cpp  database.hpp
server/src/hosts/: master.hpp  master_client.cpp  master_intra.cpp  slave.cpp  slave.hpp
server/src/sock/: .pool.hpp.kate-swp  gamesock.cpp  gamesock.hpp  intrasock.cpp  intrasock.hpp  ip.cpp  ip.hpp  packet.cpp  packet.hpp  pool.hpp  rawsock.hpp  scapesock.cpp  scapesock.hpp  tcpsock.cpp  tcpsock.hpp  tcpsock_bsd.cpp  tcpsock_win.cpp  websock.cpp  websock.hpp
server/src/utils/: bigint.cpp  bigint.hpp  csprng.cpp  csprng.hpp  net.cpp  net.hpp  string.cpp  string.hpp  time.cpp  time.hpp
server_old/: App.config  Entrypoint.cs  SockScape.csproj  scape.db
server_old/DAL/: Item.cs  ItemMaster.cs  ScapeDb.cs  User.cs
server_old/Encryption/: BlockCipher.cs  StreamCipher.cs
server_old/Libraries/Glove/: ArrayExtensions.cs  General.cs  Glove.csproj  StringExtensions.cs
server_old/Libraries/Kneesocks/: Handshake.cs  Kneesocks.csproj
server_old/Migrations/: 201708251600325_Initial.resx  Configuration.cs
server_old/Properties/: AssemblyInfo.cs
server_old/Socks/: MasterIntraClient.cs  MasterIntraServer.cs
server_old/Socks/Protocols/: ClientServerIds.cs  InterMasterIds.cs  Packet.cs
src/client/: common.hpp  main.c  main.cpp  shell.html
src/client/shaders/: _shader.cpp  _shader.hpp  test.cpp  test.hpp
src/client/sock/: socket.cpp  socket.hpp
src/client/ui/: font.cpp  font.hpp  text.cpp  text.hpp  texture.hpp  texture_array.cpp  texture_array.hpp
src/client/views/: ortho.cpp  ortho.hpp  projection.cpp  projection.hpp
src/common/crypto/: base64.cpp  base64.hpp  bcrypt.cpp  bcrypt.hpp  bfish.cpp  bfish.hpp  cipher.hpp  keyex.hpp
src/common/sock/: intrasock.hpp  packet.cpp  packet.hpp  pool.hpp  tcpsock_win.cpp
src/common/utils/: ini.cpp  ini.hpp  net.cpp  net.hpp  string.cpp  string.hpp  time.hpp
src/server/: common.hpp  main.cpp
src/server/crypto/: bcrypt.hpp  bfish.hpp  cipher.hpp  keyex.hpp  sha1.cpp  sha1.hpp
src/server/ctx/: master_client.cpp  slave.cpp
src/server/db/: _init_sql.hpp  database.cpp  database.hpp
src/server/hosts/: master.hpp  master_client.cpp  master_intra.cpp  slave.cpp  slave.hpp
src/server/sock/: frame.cpp  frame.hpp  packet.cpp  (+10 more)
src/web/: index.html  script.js  style.css
(+9 files in other folders)
